--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.11.9
-django-rest-framework==0.1.0
 djangorestframework==3.7.7
 pip==9.0.1
+psycopg2==2.7.3.2
 pytz==2017.3
 setuptools==28.8.0
